--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^5.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.6.1",
+    "eslint-config-react-native": "^4.0.0",
+    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-prettier": "^3.0.0",
+    "prettier": "^1.14.3"
   },
   "private": true
 }
